{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 713,
  "lineage": "f208ea8a-18a7-3530-d95c-16a08f69fccb",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_sever_lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "name": "web-server-lb-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-public-ip"
              }
            ],
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb",
            "location": "westus2",
            "name": "web-server-lb",
            "resource_group_name": "web-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.web_server_lb_public_ip",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_server_lb_backend_pool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb/backendAddressPools/web-server-lb-backend-pool",
            "loadbalancer_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb",
            "name": "web-server-lb-backend-pool",
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_lb.web_sever_lb",
            "azurerm_public_ip.web_server_lb_public_ip",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_server_lb_http_probe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb/probes/web-server-lb-http-prob",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb",
            "name": "web-server-lb-http-prob",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_lb.web_sever_lb",
            "azurerm_public_ip.web_server_lb_public_ip",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_server_lb_http_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb/backendAddressPools/web-server-lb-backend-pool",
            "backend_port": 80,
            "enable_floating_ip": false,
            "frontend_ip_configuration_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb/frontendIPConfigurations/web-server-lb-frontend-ip",
            "frontend_ip_configuration_name": "web-server-lb-frontend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb/loadBalancingRules/web-server-lb-http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb",
            "name": "web-server-lb-http-rule",
            "probe_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb/probes/web-server-lb-http-prob",
            "protocol": "Tcp",
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_lb.web_sever_lb",
            "azurerm_lb_backend_address_pool.web_server_lb_backend_pool",
            "azurerm_lb_probe.web_server_lb_http_probe",
            "azurerm_public_ip.web_server_lb_public_ip",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_server_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg",
            "location": "westus2",
            "name": "web-server-nsg",
            "resource_group_name": "web-rg",
            "security_rule": [],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_http",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg/securityRules/HTTP Inbound",
            "name": "HTTP Inbound",
            "network_security_group_name": "web-server-nsg",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "web-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_lb_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "learning-mustafa-web",
            "fqdn": "learning-mustafa-web.westus2.cloudapp.azure.com",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.141.173.134",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "web-server-public-ip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "web-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_server_subnet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.1.0/24",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-1.0.1.0-subnet",
            "name": "web-server-1.0.1.0-subnet",
            "network_security_group_id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg",
            "resource_group_name": "web-rg",
            "virtual_network_name": "web-server-vnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg",
            "azurerm_virtual_network.web_server_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.2.0/24",
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-1.0.2.0-subnet",
            "name": "web-server-1.0.2.0-subnet",
            "resource_group_name": "web-rg",
            "virtual_network_name": "web-server-vnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_server_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.0.0.0/22"
            ],
            "id": "/subscriptions/fa7fcc6e-4afc-4efe-9810-c457a5b9edc6/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet",
            "location": "westus2",
            "name": "web-server-vnet",
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    }
  ]
}